Input validation, overflow fix

--- a/views/partials/css/lecturerpage.css
+++ b/views/partials/css/lecturerpage.css
@@ -40,6 +40,10 @@
 	cursor: pointer;
 }
 
+#modalDescription {
+	height: auto;
+}
+
 .browse {
 	display: block;
 	margin: 0 auto;
